tests/errors/semantic/E012_mod.zy
# E012_mod {
    #> { exported_fn }

    exported_fn()     { <~ "exported" }
    not_exported_fn() { <~ "hidden" }
}
